# hw_sequence

./: ActionEditDialog.cpp  ActionEditDialog.h  CMakeLists.txt  KeyboardWidget.cpp  KeyboardWidget.h  README.md  RecordAction.cpp  RecordAction.h  SwipeModel.cpp  SwipeModel.h  adb_client.cpp  adb_client.h  argsparser.cpp  argsparser.h  commandexecutor.cpp  commandexecutor.h  control_injector.cpp  control_injector.h  control_protocol.cpp  control_protocol.h  control_socket.cpp  control_socket.h  core.cpp  core.h  core_view.cpp  core_view.h  h264decoder.cpp  h264decoder.h  hardware_controller.cpp  hardware_controller.h  hardware_grabbed.cpp  hardware_grabbed.h  hw_keyboard.cpp  hw_keyboard.h  hw_keyboard_map.h  main.cpp  main_d.cpp  mainwindow.cpp  mainwindow.h  process_injector.cpp  (+22 more)
android/: DeviceControl.java  InputHandler.java  MetaInfo.java  Protocol.java  ScreenEncoder.java  Server.java  ServiceManager.java  SurfaceControl.java  dex_sequence.sh  hw_resident.c  hw_resident.sh  injector.c
android/ashmen/: hw_resident.c  voltage_ctrl.c
android/java-stream/: MetaInfo.java  ScreenEncoder.java  Server.java  SurfaceControl.java
android/memfd/: hw_resident.c  voltage_ctrl.c
